--- a/docs/gallery/gallery.yml
+++ b/docs/gallery/gallery.yml
@@ -190,8 +190,8 @@
       href: https://yutani.rbind.io/
       code: https://github.com/rbind/yutani
       thumbnail: websites/websites-wannabe-rstats-fu.png
-    - title: Hamel Husain's Professional Site
-      subtitle: blog + notes
+    - title: Hamel Husain
+      subtitle: personal site - blog + notes
       href: https://hamel.dev
       code: https://github.com/hamelsmu/hamel/
       thumbnail: websites/websites-hamel.png
